update(swagger): Documentation Wrappers
